# rust-backend-standard

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  coverage.txt  coverage_debug.txt  coverage_detailed.txt  docker-compose.yml
.claude/: settings.local.json
docs/: architecture.md  database-schema.html  database-schema.mermaid  swagger.yaml
fldp-rust-backend-template/: Cargo.toml
fldp-rust-backend-template/api-collection/: user.http
fldp-rust-backend-template/k6_loadtest/: script.js
fldp-rust-backend-template/src/: config.rs  main.rs  state.rs
fldp-rust-backend-template/src/handlers/: mod.rs  user_handler.rs  ws.rs
fldp-rust-backend-template/src/middlewares/: auth.rs
fldp-rust-backend-template/src/providers/: redis.rs  s3.rs
fldp-rust-backend-template/src/repositories/: user_repository.rs
fldp-rust-backend-template/src/routes/: user_routes.rs
fldp-rust-backend-template/src/services/: user_service.rs
fldp-rust-backend-template/src/utils/: response.rs
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/db/: mod.rs  mongo.rs  redis.rs
src/dtos/: user.rs
src/handlers/: auth_handler.rs  docs.rs  health.rs  mod.rs  user_handler.rs  ws.rs
src/middlewares/: auth.rs  logger.rs  mod.rs  role.rs
src/mock/: db_mock.rs  mod.rs
src/mock/repositories/: user_repository_mock.rs
src/mock/services/: mod.rs  user_service_mock.rs
src/models/: user.rs
src/providers/: email.rs  mod.rs  redis.rs  s3.rs
src/repositories/: user_repository.rs
src/routes/: auth_routes.rs  mod.rs  swagger.rs  user_routes.rs  ws_routes.rs
src/services/: user_service.rs
src/utils/: mod.rs  pagination.rs  response.rs  time.rs
tests/handlers/: auth_handler_test.rs  mod.rs  user_handler_test.rs
tests/integration/: mod.rs  route_test.rs
tests/services/: mod.rs  user_service_test.rs
tests/unit/: mod.rs  pagination_test.rs
