[package]
name = "fldp-rust-backend-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
mongodb = { version = "2.8", features = ["bson-chrono-0_4", "bson-uuid-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
futures = "0.3"
anyhow = "1.0"
bson = { version = "2.8", features = ["chrono-0_4"] }

[dev-dependencies]
mockall = "0.12"
reqwest = { version = "0.11", features = ["json"] }
